# Encurtador

./: .env  .gitignore  Cargo.toml  encurtador.json
migrations/: 20250112174443_create_url_table.sql
src/: main.rs
