[package]
name = "encurtador_de_links"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
anyhow = "1.0.95"
url = "2.5.4"
